tests/snapshots/scenarios__001_page_index_hierarchy.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
description: "Scenario 001_page_index_hierarchy [page_index]: Page Index Hierarchy"
expression: result
info:
  id: 001_page_index_hierarchy
  name: Page Index Hierarchy
  category: page_index
  description: Build page index tree from markdown with nested heading levels (H1 > H2 > H3)
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/001_page_index_hierarchy/scenario.toml
---
{
  "nodes": [
    {
      "blocks": [
        {
          "block_id": "block-para-0",
          "byte_range": [
            0,
            115
          ],
          "content_hash": "689c097903fd6359",
          "kind": "Paragraph",
          "line_range": [
            1,
            1
          ]
        }
      ],
      "children": [
        {
          "blocks": [
            {
              "block_id": "block-para-0",
              "byte_range": [
                126,
                241
              ],
              "content_hash": "1869b325ef1ba289",
              "kind": "Paragraph",
              "line_range": [
                5,
                5
              ]
            }
          ],
          "children": [
            {
              "blocks": [
                {
                  "block_id": "block-para-0",
                  "byte_range": [
                    252,
                    263
                  ],
                  "content_hash": "e2feb6039c83c83f",
                  "kind": "Paragraph",
                  "line_range": [
                    9,
                    9
                  ]
                }
              ],
              "children": [],
              "is_thinned": false,
              "level": 3,
              "line_range": [
                9,
                12
              ],
              "node_id": "docs/alpha#alpha---beta---gamma",
              "summary": null,
              "text": "Gamma body.",
              "title": "Gamma",
              "token_count": 2
            }
          ],
          "is_thinned": false,
          "level": 2,
          "line_range": [
            5,
            8
          ],
          "node_id": "docs/alpha#alpha---beta",
          "summary": null,
          "text": "beta child section also carries enough words to preserve its nested heading tree and keep gamma visible beneath it.",
          "title": "Beta",
          "token_count": 19
        },
        {
          "blocks": [
            {
              "block_id": "block-para-0",
              "byte_range": [
                276,
                287
              ],
              "content_hash": "71f8034adfa16240",
              "kind": "Paragraph",
              "line_range": [
                13,
                13
              ]
            }
          ],
          "children": [],
          "is_thinned": false,
          "level": 2,
          "line_range": [
            13,
            15
          ],
          "node_id": "docs/alpha#alpha---delta",
          "summary": null,
          "text": "Delta body.",
          "title": "Delta",
          "token_count": 2
        }
      ],
      "is_thinned": false,
      "level": 1,
      "line_range": [
        1,
        4
      ],
      "node_id": "docs/alpha#alpha",
      "summary": null,
      "text": "alpha root section carries enough words to remain stable without thinning across the page index builder path today.",
      "title": "Alpha",
      "token_count": 18
    }
  ]
}
