tests/snapshots/scenarios__002_page_index_headingless.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "nodes": [
    {
      "node_id": "notes/plain#plain",
      "title": "plain",
      "level": 1,
      "text": "Just body text without headings.\nStill part of the same section.",
      "summary": null,
      "line_range": [
        1,
        2
      ],
      "token_count": 11,
      "is_thinned": false,
      "blocks": [
        {
          "block_id": "block-para-0",
          "kind": "Paragraph",
          "byte_range": [
            0,
            64
          ],
          "line_range": [
            1,
            2
          ],
          "content_hash": "dd73ab3f686e0960"
        }
      ],
      "children": []
    }
  ]
}
