tests/snapshots/scenarios__002_quantum_fusion_contexts.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "002_quantum_fusion_contexts",
  "category": "quantum_fusion",
  "status": "validated",
  "files": []
}
