tests/snapshots/scenarios__003_page_index_thinning.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "nodes": [
    {
      "node_id": "docs/thin#thin",
      "title": "Thin",
      "level": 1,
      "text": "small intro\n\nNested\nchild text that should be folded into the parent section during thinning.",
      "summary": null,
      "line_range": [
        1,
        7
      ],
      "token_count": 15,
      "is_thinned": true,
      "blocks": [
        {
          "block_id": "block-para-0",
          "kind": "Paragraph",
          "byte_range": [
            0,
            11
          ],
          "line_range": [
            1,
            1
          ],
          "content_hash": "75983180b1d24832"
        }
      ],
      "children": []
    }
  ]
}
