tests/snapshots/scenarios__004_page_index_refresh.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "nodes": [
    {
      "node_id": "docs/refresh#refresh",
      "title": "Refresh",
      "level": 1,
      "text": "refresh root body carries enough words to avoid thinning before incremental updates arrive.",
      "summary": null,
      "line_range": [
        1,
        3
      ],
      "token_count": 13,
      "is_thinned": false,
      "blocks": [
        {
          "block_id": "block-para-0",
          "kind": "Paragraph",
          "byte_range": [
            0,
            91
          ],
          "line_range": [
            1,
            1
          ],
          "content_hash": "d51dfa2d64e2bb5d"
        }
      ],
      "children": []
    }
  ]
}
