tests/snapshots/scenarios__005_page_index_semantic_docs.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "nodes": [
    {
      "node_id": "docs/alpha#alpha",
      "title": "Alpha",
      "level": 1,
      "text": "alpha root section carries enough words to remain stable while powering semantic exports for hybrid retrieval.",
      "summary": null,
      "line_range": [
        1,
        4
      ],
      "token_count": 16,
      "is_thinned": false,
      "blocks": [
        {
          "block_id": "block-para-0",
          "kind": "Paragraph",
          "byte_range": [
            0,
            110
          ],
          "line_range": [
            1,
            1
          ],
          "content_hash": "d70e1c27a3767a40"
        }
      ],
      "children": [
        {
          "node_id": "docs/alpha#alpha---beta",
          "title": "Beta",
          "level": 2,
          "text": "beta child section keeps enough detail to survive semantic document export without thinning away.",
          "summary": null,
          "line_range": [
            5,
            8
          ],
          "token_count": 14,
          "is_thinned": false,
          "blocks": [
            {
              "block_id": "block-para-0",
              "kind": "Paragraph",
              "byte_range": [
                121,
                218
              ],
              "line_range": [
                5,
                5
              ],
              "content_hash": "b0fe3fe861b45d0f"
            }
          ],
          "children": [
            {
              "node_id": "docs/alpha#alpha---beta---gamma",
              "title": "Gamma",
              "level": 3,
              "text": "gamma leaf body stays visible for semantic document export tests.",
              "summary": null,
              "line_range": [
                9,
                11
              ],
              "token_count": 10,
              "is_thinned": false,
              "blocks": [
                {
                  "block_id": "block-para-0",
                  "kind": "Paragraph",
                  "byte_range": [
                    229,
                    294
                  ],
                  "line_range": [
                    9,
                    9
                  ],
                  "content_hash": "cb7f5483dac7fe73"
                }
              ],
              "children": []
            }
          ]
        }
      ]
    }
  ]
}
