tests/snapshots/scenarios__007_search_core_baseline.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
description: "Scenario 007_search_core_baseline [search_core]: Search Core Baseline"
expression: result
info:
  id: 007_search_core_baseline
  name: Search Core Baseline
  category: search_core
  description: Baseline search returns ranked matches
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/007_search_core_baseline/scenario.toml
---
{
  "category": "search_core",
  "files": [],
  "scenario_id": "007_search_core_baseline",
  "status": "validated"
}
