tests/snapshots/scenarios__008_search_core_direct_id.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
description: "Scenario 008_search_core_direct_id [search_core]: Search Core Direct ID"
expression: result
info:
  id: 008_search_core_direct_id
  name: Search Core Direct ID
  category: search_core
  description: Direct ID match in search query
  input_type: markdown_tree
  input_paths:
    - input
  expected_output_type: ~
input_file: packages/rust/crates/xiuxian-wendao/tests/scenarios/008_search_core_direct_id/scenario.toml
---
{
  "category": "search_core",
  "files": [],
  "scenario_id": "008_search_core_direct_id",
  "status": "validated"
}
