tests/snapshots/scenarios__010_search_core_fts_boost.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "010_search_core_fts_boost",
  "category": "search_core",
  "status": "validated",
  "files": []
}
