tests/snapshots/scenarios__011_search_core_limit.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "011_search_core_limit",
  "category": "search_core",
  "status": "validated",
  "files": []
}
