tests/snapshots/scenarios__012_search_core_payload_counts.snap
---
source: packages/rust/crates/xiuxian-testing/src/scenario.rs
expression: result
---
{
  "scenario_id": "012_search_core_payload_counts",
  "category": "search_core",
  "status": "validated",
  "files": []
}
